--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "~36.0.0",
     "react-dom": "~16.9.0",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-navbar": "^2.1.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
